[package]
name = "p2pgossip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.*"
actix-web = "^3.3.2"
url = {version = "^2.1.1", features = ["serde"]}
chrono = { version = "^0.4", features = ["serde", "rustc-serialize"] }
serde = {version = "~1.0.130", features = ["derive"]}
serde_json = { version = "~1.0.68"}
env_logger = "^0.9.0"
log = "~0.4.14"
tokio = {version= "^1.11.0", features = ["macros"]}
futures = "~0.3.17"

[dev-dependencies]
actix-test = "*"
actix-rt = "^2.2.0"